--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   },
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
-    "@chaingpt/generalchat": "^1.0.0",
+    "@google/genai": "^1.42.0",
     "@supabase/supabase-js": "^2.97.0",
     "axios": "^1.13.5",
-    "dotenv": "^17.3.1"
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "tsx": "^4.7.0",
     "typescript": "^5.9.3"
